--- a/address-app.properties
+++ b/address-app.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+#discovery-service running url
+eureka.client.service-url.defaultZone=http://localhost:1987/eureka/
