--- a/address-app.properties
+++ b/address-app.properties
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #discovery-service running url
 eureka.client.service-url.defaultZone=http://localhost:1987/eureka/
+
+#configPath is a key for map, you can set value and can access in another microservice e.g. here is employee-app
+eureka.instance.metadata-map.configPath=/address-app/api   
