--- a/employee-app.properties
+++ b/employee-app.properties
@@ -7,3 +7,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+addressservice.base.url=http://localhost:8081/address-app/api
+eureka.client.service-url.defaultZone=http://localhost:19
