--- a/employee-app.properties
+++ b/employee-app.properties
@@ -8,5 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-addressservice.base.url=http://localhost:8081/address-app/api
-eureka.client.service-url.defaultZone=http://localhost:19
+#addressservice.base.url=http://localhost:8081/address-app/api
+eureka.client.service-url.defaultZone=http://localhost:1987/eureka/
