--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/currency?useSSL=false
-spring.datasource.url=jdbc:mysql://localhost:3306/microservice?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/currency?useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/microservice?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 
